B-F Backup Sandbox 30.4.12/src/objects/Open_Item__c.object
<CustomObject>
    <description>An Open Item represent issues, risks, deliverables or action items. Team members can create action item records as the outcome of meetings and daily interactions. Issues  and risks can similarly be captured, allowing project management to maintain an Issue Log and Risk Log.</description>
    <fields>
        <fullName>Approver__c</fullName>
        <label>Approver</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoption and Org Readiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <label>Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <label>Detailed Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalate_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select user who you would like to escalate this issue to.</description>
        <inlineHelpText>Select user who you would like to escalate this issue to. The user should be atleast a OneApp user.</inlineHelpText>
        <label>Escalate To?</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Open_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Escalation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalation Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Resolution__c</fullName>
        <label>Final Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <label>Meeting</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Requirement</label>
        <referenceTo>Requirement__c</referenceTo>
        <relationshipName>Issue_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Options__c</fullName>
        <label>Resolution Options</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Adoption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Cleansing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <label>Submitted By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Action Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deliverable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Package</label>
        <referenceTo>Work_Package__c</referenceTo>
        <relationshipLabel>Open Items</relationshipLabel>
        <relationshipName>Open_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Open Item</label>
    <listViews>
        <fullName>All_Action_Items</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Action Item</value>
        </filters>
        <label>All Action Items</label>
    </listViews>
    <listViews>
        <fullName>All_Deliverables</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Deliverables</label>
    </listViews>
    <listViews>
        <fullName>All_Issues</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Issue</value>
        </filters>
        <label>All Issues</label>
    </listViews>
    <listViews>
        <fullName>All_Risks</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Risk</value>
        </filters>
        <label>All Risks</label>
    </listViews>
    <listViews>
        <fullName>My_Action_Items</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Action Item</value>
        </filters>
        <label>My Action Items</label>
    </listViews>
    <listViews>
        <fullName>My_Deliverables</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Deliverables</label>
    </listViews>
    <listViews>
        <fullName>My_Issues</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Issue</value>
        </filters>
        <label>My Issues</label>
    </listViews>
    <listViews>
        <fullName>My_Risks</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Risk</value>
        </filters>
        <label>My Risks</label>
    </listViews>
    <nameField>
        <displayFormat>ITEM-{00000}</displayFormat>
        <label>Open Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Open Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>